--- a/frontend/app/app.component
+++ b/frontend/app/app.component
@@ -1,8 +1,8 @@
 (function(app) {
   app.AppComponent =
     ng.core.Component({
-      selector: 'my-app',
-      template: '<h1>My First Angular 2 App</h1>'
+      selector: 'vesseltrip',
+      template: '<h1>Main-Template Vessel</h1>'
     })
       .Class({
         constructor: function() {}
