--- a/backend/userfrosting/templates/themes/vesseltrip/components/jumbotron/main-nav.twig
+++ b/backend/userfrosting/templates/themes/vesseltrip/components/jumbotron/main-nav.twig
@@ -5,14 +5,32 @@
 {% endif%}
 {% set active_page = page.active_page|default('') %}
 {% block navigation %}
-<div class="header">
-    <ul class="nav navbar-nav nav-pills pull-right" id="navigation">
+<!-- Navigation -->
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand text-uppercase" href="#">Vesseltrip</a>
+        </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
     {% for item in navigation_bar %}
     <li{% if item[0] == active_page %} class="active"{% endif%}>
         <a role="menuitem" href="{{site.uri.public}}/{{item[0]}}">{{item[1]}}</a>
     </li>
-    {% endfor %}    
+    {% endfor %}
     </ul>
-    <h3 class="text-muted">{{site.site_title}}</h3>
-</div>
+        </div>
+        <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container -->
+</nav>
 {% endblock %}
