--- a/backend/userfrosting/templates/themes/vesseltrip/layouts/layout-jumbotron.twig
+++ b/backend/userfrosting/templates/themes/vesseltrip/layouts/layout-jumbotron.twig
@@ -24,22 +24,17 @@
         <!-- Favicon -->
         <link rel="icon" type="image/x-icon" href="{{site.uri.favicon}}" />
         
-        <!-- Page stylesheets -->
-        {% for item in includeCSS(page_group|default("common")) %}
-          <link rel="stylesheet" href="{{item}}" type="text/css" >
-        {% endfor %}
-        
-        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-        <!--[if lt IE 9]>
-            <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-            <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-        <![endif]-->
-        
-        <!-- Header javascript (not recommended) -->
-        {% for item in includeJSTop(page_group|default("common")) %}
-          <script src="{{item}}" ></script>
-        {% endfor %}  
+<link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="css/full-width-pics.css" rel="stylesheet">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
     </head>
     {% endblock %}
     <body>
