--- a/backend/userfrosting/templates/themes/vesseltrip/layouts/layout-dashboard.twig
+++ b/backend/userfrosting/templates/themes/vesseltrip/layouts/layout-dashboard.twig
@@ -58,17 +58,21 @@
         </div>
     </footer>
         <!-- /#wrapper -->
-        
-        {# This block is for dynamic fragments of code that lie outside of the main DOM #}
-        {% block fragments %}{% endblock %}
-        
-        <script src="{{site.uri.js}}/config.js" ></script>
-        {% for item in includeJSBottom(page_group|default("common")) %}
-          <script src="{{item}}" ></script>
-        {% endfor %}
-        
-        {# This block allows you to create page-specific Javascript in a child template #}
-        {% block page_scripts %}{% endblock %}        
+
+    {# This block is for dynamic fragments of code that lie outside of the main DOM #}
+    {% block fragments %}{% endblock %}
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
+    <script src="{{site.uri.js}}/config.js" ></script>
+    {% for item in includeJSBottom(page_group|default("common")) %}
+        <script src="{{item}}" ></script>
+    {% endfor %}
+
+    {# This block allows you to create page-specific Javascript in a child template #}
+    {% block page_scripts %}{% endblock %}
     </body>  
 </html>
 {% endblock %}
