--- a/frontend/style.css
+++ b/frontend/style.css
@@ -7,9 +7,8 @@
     max-width: 50%;
 }
 
-#map {
-    width:100%;
-    height:450px;
+.map {
+    position: absolute; top: 0; right: 0; bottom: 50px; left: 0;
 }
 
 .labels {
@@ -18,4 +17,10 @@
 
 .textInput {
     resize: none;
+}
+
+.footer {
+    position: absolute; top: calc(100% - 100px); right: 0; bottom: 0; left: 0;
+    color: black;
+    height: 50px;
 }
