--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,6 +1,7 @@
 .content {
     margin-top: 50px;
     margin-bottom: 30px;
+    width: 300px;
 }
 
 .ratingInput {
@@ -8,7 +9,8 @@
 }
 
 .map {
-    position: absolute; top: 0; right: 0; bottom: 50px; left: 0;
+    width: calc(100% - 300px);
+    height: calc(100vh - 100px);
 }
 
 .labels {
@@ -20,7 +22,23 @@
 }
 
 .footer {
-    position: absolute; top: calc(100% - 100px); right: 0; bottom: 0; left: 0;
+    position: absolute; top: calc(100vh - 100px); right: 0; bottom: 0; left: 0;
     color: black;
     height: 50px;
+    background-color: lightgrey;
+}
+
+.ratingOutput {
+    height: calc(100vh - 62px);
+    width: 300px;
+    background: #eee;
+    float: left;
+    margin: 0px;
+    padding-bottom: 0px;
+}
+
+.ratingList {
+    width: 300px;
+    list-style-type: none;
+    padding-left: 0px;
 }
