--- a/backend/userfrosting/templates/home.twig
+++ b/backend/userfrosting/templates/home.twig
@@ -15,12 +15,12 @@
 
 {% block content %}    
 <header>
-    <img class="img-responsive img-center" src="../../../../public/images/vesseltrip.png" alt="">
 
+    <img class="img-responsive img-center" src="{{site.uri.public}}/images/vesseltrip.png" alt="">
     <h1 class="text-white">Rate your Vessel</h1>
     <form class="form-inline">
         <div class="form-group">
-            <input class="form-control input-lg" type="search" placeholder="Type a MIU...">
+            <input class="form-control input-lg" type="search" placeholder="Type a IMO...">
         </div>
         <button class="btn btn-primary btn-lg">Go</button>
 
