--- a/frontend/css/full-width-pics.css
+++ b/frontend/css/full-width-pics.css
@@ -10,7 +10,7 @@ body {
 }
 
 .full {
-    background: url('/img/background.jpg') no-repeat center center fixed;
+    background: url('/frontend/img/background.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
